mule-user-guide/v/3.4/mule-examples.adoc
= Mule Examples

Mule provides a suite of example materials to help you learn more about building applications in Mule Studio and Mule Standalone. 

== Examples and Templates

Mule example applications offer insight into how you can use Mule to manage system connection and integration situations. Based on real-life business use cases, the examples demonstrate Mule's features and functionality, and suggest how you can take advantage of them.

* In *Mule Studio*, Mule's graphical interface, these example apps exist in the form of *templates* which you can use to build a Mule application without having to start from scratch.
* In *Mule Standalone*, (Mule without Studio) these example apps exist as files in the examples folder of the product distribution. You can access these example applications from your computer's console, using them as foundations upon which to build your own apps.

[tabs]
------
[tab,title="Studio"]
....

[cols=",",options=]
|===
.2+|Complexity .2+|Example App .2+|Key Concepts 2+|Included in Runtime
|*Community* |*Enterprise*
|Low
|link:/mule-user-guide/v/3.4/hello-world-example[Hello World]
|image:icon-world-blue-big.png[icon-world-blue-big]Interacts with an end user via an HTTP request.
|✓
|✓
|Low
|link:/mule-user-guide/v/3.4/http-request-response-with-logger-example[HTTP Request-Response with Logger]
|image:logging.png[logging] Logs activity in an application.
|✓
|✓
|Medium
|link:/mule-user-guide/v/3.4/connect-with-salesforce-example[Connect with Salesforce]
|image:cloud_icon.png[cloud_icon] Facilitates communication between a file-based system(s) and Salesforce.
|
|✓
|Medium
|link:/mule-user-guide/v/3.4/datamapper-with-flowreflookup-example[DataMapper with FlowRefLookup]
|image:cloud_icon.png[cloud_icon] Facilitates communication between a file-based system(s) and Salesforce. +
 +
 image:datamapper-1.png[datamapper-1]Uses a FlowRefLookup Table to acquire information outside the message, then append it to the payload. 
|
|✓
|Medium
|link:/mule-user-guide/v/3.4/legacy-modernization-example[Legacy Modernization]
|image:legacy_modern_icon.png[legacy_modern_icon] Acts as a Web service proxy for a legacy, file-based system.
|
|✓
|Medium
|link:/mule-user-guide/v/3.4/foreach-processing-and-choice-routing-example[Foreach Processing and Choice Routing]
|image:content_routing.png[content_routing]Dynamically applies routing criteria to a message at runtime. +
 +
 image:iteration2.png[iteration2]Processes collections iteratively without losing any of the payload. +
 +
 image:enriched4.png[enriched4] Enriches  message payloads with data, rather than changing payload contents. +
|✓
|✓
|Medium
|link:/mule-user-guide/v/3.4/websphere-mq-example[Websphere MQ]
|image:wmq.png[wmq]Facilitates message processing between Mule and WMQ. 
|
|✓
|High
|link:/mule-user-guide/v/3.4/xml-only-soap-web-service-example[XML-only SOAP Web Service]
|image:orchestrate.png[orchestrate]Orchestrates a sequence of calls to other services or message queues. +
 +
image:content_routing.png[content_routing]Dynamically applies routing criteria to a message at runtime.
|
|✓
|High
|link:/mule-user-guide/v/3.4/soap-web-service-security-example[SOAP Web Service Security]
|image:icon-lock-blue-big.png[icon-lock-blue-big] Implements application-layer security on a SOAP Web service.
|
|✓
|High
|link:/mule-user-guide/v/3.4/service-orchestration-and-choice-routing-example[Service Orchestration and Choice Routing]
|image:orchestrate.png[orchestrate]Orchestrates a sequence of calls to other services or message queues. +
 +
image:content_routing.png[content_routing]Dynamically applies routing criteria to a message at runtime. +
 +
 image:iteration2.png[iteration2] P rocesses collections iteratively without losing any of the payload. +
  +
 image:cache_icon.png[cache_icon]Caches message content during processing  to reuse frequently called data.
 |
|✓
|===

*What happened to the old examples?*

They haven't disappeared! Click the links below to download examples that were deprecated with 3.4.0. 

*Mule Community Examples*

*  http://mule-studio-examples.s3.amazonaws.com/ce/echo.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/foreach-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/legacy-modernization.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/order-discounter.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/scripting-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/flight-reservation-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/hello-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/mobile-app.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/order-fulfillment.zip
*  http://mule-studio-examples.s3.amazonaws.com/ce/stock-quotes-example.zip

*Mule Enterprise Examples*

*  http://mule-studio-examples.s3.amazonaws.com/ee/e-store.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/foreach-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/order-processing.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/travel-agent.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/excel-to-json.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/jdbc-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/security-example.zip
*  http://mule-studio-examples.s3.amazonaws.com/ee/websphere-mq-example.zip

....
[tab,title="Standalone"]
....
[NOTE]
The examples included with Mule Standalone persist from Mule 3.3.X. Therefore, the documentation for these examples resides within link:/mule-user-guide/v/3.3/mule-examples[*Mule 33X Documentation*].

[cols=",",options]
|===
.2+|Complexity .2+|Example App .2+|Key Concepts 2+|Included in Runtime
|*Community* |*Enterprise*
|Low
|link:/mule-user-guide/v/3.4/hello-world-example[hello]
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="icon-world-blue-big.png"]Interacts with an end user via an HTTP request.
|✓
|✓
|Low
|link:/docs/display/current/HTTP+Request-Response+with+Logger+Example[echo]
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="logging.png"] Logs activity in an application.
|✓
|✓
|Low
|link:/mule-user-guide/v/3.3/gps-walker-example[gpswalker]
|Uses AJAX to communicate from a Mule to a Web browser.
|✓
|✓
|Low
|link:/docs/display/current/Foreach+Processing+and+Choice+Routing+Example[loanbroker-simple]
|Uses the simple-service configuration pattern, transformers and filters with Groovy scripting, and CXF clients and services.
|✓
|✓
|Low
|link:/mule-user-guide/v/3.3/scripting-example[scripting]
|Invokes a JSR-223 script from Mule. +
 +
image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="content_routing.png"] Dynamically applies routing criteria to a message at runtime. +
 +
Uses JVM environment variables.
|✓
|✓
|Medium
|link:/mule-user-guide/v/3.3/foreach-example[foreach]
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="iteration2.png"] Processes collections iteratively without losing any of the payload.
|✓
|✓
|Medium
|link:/mule-user-guide/v/3.3/bookstore-example[bookstore]  
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="icon-world-blue-big.png"]Exposes a Web service using Jetty and CXF.
|✓
|✓
|Medium
|link:/mule-user-guide/v/3.3/stock-quote-example[stockquote]
|Invokes an ASPX Web service from Mule. +
 +
 image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="orchestrate.png"]Orchestrates a sequence of calls to other services or message queues.
|✓
|✓
|Medium
|link:/docs/display/current/WebSphere+MQ+Example[wmq]
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="wmq.png"]Facilitates message processing between Mule and WMQ. 
|
|✓
|High
|link:/mule-user-guide/v/3.3/flight-reservation-example[flight-reservation]
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="iteration2.png"] Processes collections iteratively without losing any of the payload. +
 +
 image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="orchestrate.png"] Orchestrates a sequence of calls to other services or message queues.
|✓
|✓
|High
|link:/mule-user-guide/v/3.3/jdbc-transport-example[jdbc]
|Uses JDBC endpoints and SQL queries together to manipulate data. +
 +
Sets properties on messages and parses and transforms message payload data. +
 +
Handles errors with a customized exception strategy
|
|✓
|High
|link:/docs/display/current/SOAP+Web+Service+Security+Example[security]
|image:/docs/plugins/servlet/confluence/placeholder/unknown-attachment?locale=en_GB&version=2[image,title="icon-lock-blue-big.png"] Implements application-layer security on a SOAP Web service.
|
|✓
|===
....
------

== Create and Run Example Applications

[tabs]
------
[tab,title="Studio"]
....
=== Create

. If you haven't already done so, visit http://www.mulesoft.org[www.mulesoft.org] and download http://www.mulesoft.org/download-mule-esb-community-edition[Mule ESB with Mule Studio] for free. Follow the instructions on the website to launch *Mule Studio* and select a workspace.
. Click the `File` menu, then select `New` > `Mule Project`.
. Use the table below to enter values in the fields. +
 +
image:new_project.png[new_project]

+
[cols=",",options="header",]
|===
|Field |Value
|*Name* |a name for your new project
|*Description* |a brief description of the application you intend to build
|*Server* *Runtime* |Mule Server 3.4.0 EE
|===
+

link:/mule-user-guide/v/3.4/adding-community-runtime[How do I get Mule 3.4 Community runtime?]
+
. Click the box next to *Create project based on an existing template*.
. Click a line item to select the template you wish to use to build your project. 
. Click *Finish*. Studio creates and opens the new project, complete with pre-built and pre-configured flows.

=== Run

. In the *Package Explorer* pane in Studio, right-click the project name, then select `Run As > Mule Application`. Studio runs the application and Mule is up and kicking!
+

[source, code, linenums]
----
**********************************************************************
* Application: projecttotest                                         *
* OS encoding: MacRoman, Mule encoding: UTF-8                        *
*                                                                    *
* Agents Running:                                                    *
*   DevKit Extension Information                                     *
*   Clustering Agent                                                 *
*   JMX Agent                                                        *
**********************************************************************
INFO  2013-04-09 13:08:36,099 [main] org.mule.module.launcher.MuleDeploymentService:
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'projecttotest'                              +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----

. To stop the application from running, click the red *Terminate* button in Studio's *Console*. +
 +
image:terminate.png[terminate]
....
[tab,title="Standalone"]
....
=== Create

. If you haven't already done so, visit http://www.mulesoft.org[www.mulesoft.org] and download http://www.mulesoft.org/download-mule-esb-community-edition[*Mule ESB standalone runtime* *(without Mule Studio)* ] for free. (Alternatively, download a trial version of http://www.mulesoft.com/mule-esb-open-source-esb[*Mule ESB Enterprise (with Management Tools* *)* ] .
. Navigate to the folder on your local drive that contains your copy of Mule ESB Standalone runtime.
. Locate the `Examples` folder, then the folder for the example you wish to run.
. Copy the pre-built application archive (the `.zip` file) for the example.
. Paste the copy of the `.zip` file in the Mule applications folder, `$MULE_HOME/apps`. +
For example, to run the Hello World example, copy `mule-example-hello-3.4.0.zip` then move the copy to the `$MULE_HOME/examples` folder.  +
+

image:examples_folder.png[examples_folder]
+

[NOTE]
====
Alternatively, you can build the example in a build tool such as *Ant* or *Maven*.

. Run `ant` or `mvn` in your Ant or Maven build tool, respectively.
. The build tool compiles the example classes, produces an application zip file and copies it to your `$MULE_HOME/apps` folder.
====
+


. Start Mule.
+
 Need more detail?
+

.. Open a new command line. +
 *Windows*: Open the *Console*. +
 *Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
.. Access the directory and folder in which you pasted the zip file for your example (i.e. the application folder in Mule). For example, type `cd /Users/aaron/Downloads/mule-standalone-3.4.0/`
.. To start Mule, type `./bin/mule`

+

. After it starts, Mule polls the `apps` and `examples` folders every 5 seconds; it picks up the application you copied to the `examples` folder, then deploys it automatically. In the first command line, Mule notifies you that it has deployed the example application.
. To stop the application from running, hit **CTRL-C**.
....
------

== See Also

* Study the link:/mule-fundamentals/v/3.4/basic-studio-tutorial[Mule Studio Tutorials] for step-by-step instructions on how to build an application.
* Read through the link:/mule-fundamentals/v/3.4[Mule Fundamentals] to familiarize yourself with core concepts.
